# self-rag

./: README.md  main.ipynb  pyproject.toml
common/: helper_functions.py
