[project]
name = "self-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.1",
    "pypdf>=6.4.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
